--- a/release/app/package.json
+++ b/release/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ObsCtrlBackend",
   "version": "0.0.1",
-  "description": "",
+  "description": "ObsCtrl - Backend",
   "license": "MIT",
   "author": {
     "name": "sebseb7",
