--- a/package.json
+++ b/package.json
@@ -83,13 +83,16 @@
     }
   },
   "dependencies": {
-    "@greenlock/manager": "^3.1.0",
-    "@root/greenlock": "^4.0.5",
-    "acme-http-01-standalone": "^3.0.5",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "antd": "^4.23.2",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
+    "electron-store": "^8.1.0",
     "electron-updater": "^5.2.2",
-    "greenlock-store-fs": "^3.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
